fixed page shift on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1805,6 +1805,7 @@ footer {
   letter-spacing: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
+  overflow: hidden;
 }
 @media (max-width: 992px) {
   footer {
